Fix page overflow

--- a/frontend/src/components/PlantViewer.css
+++ b/frontend/src/components/PlantViewer.css
@@ -1,5 +1,5 @@
 .viewer-container {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     display: flex;
@@ -15,8 +15,6 @@
     height: auto;
     top: 0;
     left: 0;
-    right: 0;
-    margin: auto;
     background-color: #4ac769;
     display: flex;
     justify-content: flex-start;
